# viper_foxglove

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  DynamicProtobufDecoder.cpp  DynamicProtobufDecoder.hpp  FoxgloveInterface.cpp  FoxgloveInterface.hpp  FoxgloveMacros.hpp  FoxgloveUtility.cpp  FoxgloveUtility.hpp  LICENSE.md  MeshReconstruction.cpp  MeshReconstruction.hpp  PointCloudGUI.cpp  PointCloudGUI.hpp  README.md  SensorData.cpp  SensorData.hpp  SerialForce.cpp  SerialForce.hpp  VPcmdDefs.h  VPif.cpp  VPif.h  Viper.cpp  Viper.hpp  ZMQServer.cpp  ZMQServer.hpp  main.cpp  pointcloud.ipynb  vcpkg-configuration.json  vcpkg.json  viper-config.json  viper_ui.cpp  viper_ui.h
relay/: relay.py  requirements.txt
schema/foxglove/: ArrowPrimitive.bfbs  ArrowPrimitive_generated.h  ByteVector.bfbs  ByteVector_generated.h  CameraCalibration.bfbs  CameraCalibration_generated.h  CircleAnnotation.bfbs  CircleAnnotation_generated.h  Color.bfbs  Color_generated.h  CompressedImage.bfbs  CompressedImage_generated.h  CompressedVideo.bfbs  CompressedVideo_generated.h  CubePrimitive.bfbs  CubePrimitive_generated.h  CylinderPrimitive.bfbs  CylinderPrimitive_generated.h  Duration.bfbs  Duration_generated.h  FrameTransform.bfbs  FrameTransform_generated.h  FrameTransforms.bfbs  FrameTransforms_generated.h  GeoJSON.bfbs  GeoJSON_generated.h  Grid.bfbs  Grid.fbs  Grid_generated.h  ImageAnnotations.bfbs  ImageAnnotations_generated.h  KeyValuePair.bfbs  KeyValuePair_generated.h  LaserScan.bfbs  LaserScan_generated.h  LinePrimitive.bfbs  LinePrimitive_generated.h  LocationFix.bfbs  LocationFix_generated.h  Log.bfbs  (+45 more)
